--- a/styles.css
+++ b/styles.css
@@ -151,4 +151,7 @@ input:focus::placeholder {
 textarea {
   border: 1px solid white;
   border-radius: 4px;
+  background-color: #252220;
+  color: white;
+  font-size: medium;
 }
